added cpu affinity, fixed ganttChart